--- a/index.html
+++ b/index.html
@@ -2,45 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar__container">
-            <a href="/" id="navbar__logo">
-                Happy Grocery
-            </a>
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/" class="navbar__links"> 
-                        Home 
-                    </a>
-                </li>
-                <li class="navbar__item">
-                    <a href="" class="navbar__links">
-                        Top Selling
-                    </a>
-                </li>
-                <li class="navbar__item">
-                    <a href="" class="navbar__links">
-                        Make A Return
-                    </a>
-                </li>
-                <li class="navbar__btn">
-                    <a href="" class="button">
-                        Contact Us 
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <h1>Newest Arrivals</h1>
+    <h1>Happy Grocery</h1>
+
+    <form action="">
+        <textarea id="table" name="table" rows="4" cols="50"></textarea>
+    </form>
+
+    <form action="">
+        <label for="cars">Choose a query:</label>
+        <select name="cars" id="cars">
+          <option value="least">Find items with least amount of stock</option>
+          <option value="returns">Find items that are commonly returned</option>
+          <option value="average">Find the average amount spent on grocery orders</option>
+          <option value="promotions">Find items that are currently on sale</option>
+          <option value="deliveries">Find the amount of delivery request this month</option>
+        </select>
+        <input type="submit" value="Submit">
+    </form>
+
+
+
 </body>
 </html>
